--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,11 @@
 remote_theme: "mmistakes/minimal-mistakes@4.17.2"
 
+
+
+# Plugins (previously gems:)
+plugins:
+  - jekyll-paginate
+  - jekyll-sitemap
+  - jekyll-gist
+  - jekyll-feed
+  - jekyll-include-cache
