--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,12 +1,12 @@
 # main links
 main:
-  - title: "Quick-Start Guide"
-    url: https://mmistakes.github.io/minimal-mistakes/docs/quick-start-guide/
-  # - title: "About"
-  #   url: https://mmistakes.github.io/minimal-mistakes/about/
-  # - title: "Sample Posts"
-  #   url: /year-archive/
-  # - title: "Sample Collections"
-  #   url: /collection-archive/
+  - title: "Home"
+    url: https://ywang512.github.io/home/
+  - title: "Projects"
+    url: https://ywang512.github.io/year-archive/
+  - title: "Experience and Education"
+    url: https://ywang512.github.io/exp-edu/
+  - title: "About"
+    url: https://ywang512.github.io/about/
   # - title: "Sitemap"
   #   url: /sitemap/
