--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,7 +1,7 @@
 # main links
 main:
   - title: "Home"
-    url: https://ywang512.github.io/home/
+    url: https://ywang512.github.io/
   - title: "Projects"
     url: https://ywang512.github.io/year-archive/
   - title: "Experience and Education"
