--- a/_config.yml
+++ b/_config.yml
@@ -16,9 +16,9 @@ minimal_mistakes_skin    : "default" # "air", "aqua", "contrast", "dark", "dirt"
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Site Title"
+title                    : "Yifei Wang"
 title_separator          : "-"
-subtitle                 : "Site Subtitle" # site tagline that appears below site title in masthead
+subtitle                 : "" # site tagline that appears below site title in masthead
 name                     : "Site Name"
 description              : "An amazing website."
 url                      : "https://ywang512.github.io" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
