add linkedin URL and logo at site author

--- a/_config.yml
+++ b/_config.yml
@@ -125,6 +125,9 @@ author:
 #     - label: "Facebook"
 #       icon: "fab fa-fw fa-facebook-square"
 #       # url: "https://facebook.com/"
+    - label: "LinkedIn"
+      icon: "fab fa-fw fa-linkedin"
+      url: "https://www.linkedin.com/in/yifei-wang-0249b5170/"
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
       url: "https://github.com/ywang512"
