--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ minimal_mistakes_skin    : "default" # "air", "aqua", "contrast", "dark", "dirt"
 locale                   : "en-US"
 title                    : "Yifei Wang"
 title_separator          : "-"
-subtitle                 : "" # site tagline that appears below site title in masthead
+subtitle                 : "MIDS @ Duke" # site tagline that appears below site title in masthead
 name                     : "Yifei Wang"
 description              : "An amazing website."
 url                      : "https://ywang512.github.io" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
